--- a/data/testimonial.yml
+++ b/data/testimonial.yml
@@ -1,5 +1,5 @@
 enable : true
-bgImage : images/backgrounds/bg-2.jpg
+bgImage : images/backgrounds/map.png
 testimonialItem :
   - name : Dzaiimah Hakim
     image : images/team/client-1.jpg
