Ready for netlify

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://echoedlabs.com/"
+baseURL = ""
 languageCode = "en-us"
 title = "EchoedLabs - Empowering Youths with Tech Solutioning Skills"
 
