--- a/data/contact.yml
+++ b/data/contact.yml
@@ -1,6 +1,6 @@
 enable : true
-heading : Let's get to know each
-headingSpan : other
+heading : Contact
+headingSpan : Us
 title : Contact Details
 content : Interested to know more about our courses or just wanna chat with us? Feel free to drop us a message and become a part of the EchoedLabs Community today!
 enable_maps : false
