--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = ""
+baseURL = "//echoedlabs.com"
 languageCode = "en-us"
 title = "EchoedLabs - Empowering Youths with Tech Solutioning Skills"
 
