--- a/data/contact.yml
+++ b/data/contact.yml
@@ -17,4 +17,4 @@ contactDetails :
 #    info : "Fax: +880-31-000-000"
     
   - icon : tf-ion-ios-email-outline
-    info : "Email: admin@echoedlabs.com"
+    info : "Email: hello@echoedlabs.com"
